# tic-tac-bro

./: CMakeLists.txt  README.md  README_BR.md
include/: game.h
include/bot/: brandom.h
src/: game.c  main.c
src/bot/: brandom.c
